style.css
body {
    margin: 0;
}

.container {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;
}

.container > div {
    border: 1px solid black;
    background-color: pink;
}

/* HEADER */

.header {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1.5fr;
    padding: 15px 50px;
    gap: 10px 30px;
}

/* .header > div {
    border: 1px solid black;
} */

.header .icon {
    width: 2.5rem;
}

.search-container {
    display: flex;
    align-items: center;
    gap: 10px;
}

.search-bar {
    flex: 1;
    height: 1.75rem;
}

.user-container {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 15px;
}

.user-container h3 {
    margin: 0;
}

.user-photo {
    width: 3.5rem;
    border-radius: 50%;
}

.greeting-container {
    display: flex;
    gap: 15px;
    align-items: center;
}

.greeting-photo {
    width: 5rem;
    border-radius: 50%;
}

.greeting-container p,
.greeting-container h2 {
    margin: 0;
}

.greeting-container p {
    padding-bottom: 5px;
}

.btn-container {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 30px;
}

.btn-container button {
    height: 2rem;
    width: 6rem;
}

/* SIDEBAR */

.sidebar {
    grid-row: 1 / 3;
    display: grid;
    row-gap: 30px;
    padding: 10px 15px;
}

.logo,
.sidebar li {
    display: flex;
    align-items: center;
}

.sidebar ul {
    margin: 0;
    padding: 0;
}

.logo {
    gap: 5px;
}

.logo-icon {
    width: 4.5rem;
}

.sidebar li {
    gap: 10px;
}

.sidebar p {
    font-size: 18px;
}

li img {
    width: 2.5rem;
}

/* MAIN CONTENT */

.main-content {

}

